// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Icon Button variants: action 1`] = `
<ActionIconButtonContainer
  disabled={false}
  onClick={[Function]}
  variant="action"
>
  <StyledComponent
    disabled={false}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "ActionIconButtonContainer-sc-1imkol5-0",
          "isStatic": false,
          "lastClassName": "clLUM",
          "rules": Array [
            "
  ",
            "
  ",
            "display:",
            [Function],
            ";align-items:center;",
            [Function],
            " ",
            [Function],
            " justify-content:center;",
            "
  ",
            [Function],
            "

  padding: 0;
  border: 0;
  background: inherit;

  &:focus,
  &:active {
    outline: 0;
  }
",
            "
",
            "
  ",
            "
  height: ",
            "42",
            "px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;

  width: ",
            [Function],
            ";
",
            "
",
            "
  width: ",
            "42",
            "px;
  border: 0;
  color: #8da2b5;
  background-color: #fff !important;
  border: 1px solid transparent;
  transition: all 0.12s ease-out;
 
  height: ",
            [Function],
            ";
  width: ",
            [Function],
            ";

  &:active {
    ",
            "
  ",
            "background:linear-gradient(180deg,rgba(93,157,245,0.14) 0%,rgba(44,133,255,0.205899) 97.03%),#ffffff;",
            "

  border: 1px solid #fff;
  color: #5b9dfa;
  box-shadow: 0 0 0 1px #5b9dfa99 !important;
",
            "
  }

  ",
            [Function],
            "

  ",
            [Function],
            "

  ",
            [Function],
            "
",
            "background:linear-gradient(180deg,rgba(93,157,245,0.14) 0%,rgba(44,133,255,0.205899) 97.03%),#ffffff;",
            " border:1px solid #fff;color:#5d9df5;box-shadow:0 0 0 1px #fff,0 1px 2px 1px rgba(17,49,96,0.16);&:hover{box-shadow:0 0 0 1px #fff,0 2px 4px 1px rgba(17,49,96,0.16);}",
            [Function],
            ";",
          ],
        },
        "displayName": "ActionIconButtonContainer",
        "foldedComponentIds": Array [
          "sc-bdVaJa",
          "sc-ifAKCX",
          "sc-EHOje",
        ],
        "render": [Function],
        "styledComponentId": "ActionIconButtonContainer-sc-1imkol5-0",
        "target": "button",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    onClick={[Function]}
    variant="action"
  >
    <button
      className="sc-bdVaJa sc-ifAKCX sc-EHOje ActionIconButtonContainer-sc-1imkol5-0 clLUM"
      disabled={false}
      onClick={[Function]}
    >
      <ForwardRef
        color="currentColor"
        icon="elipsis"
      >
        <styled.span
          color="currentColor"
          size={16}
        >
          <StyledComponent
            color="currentColor"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bxivhb",
                  "isStatic": false,
                  "lastClassName": "iqcteL",
                  "rules": Array [
                    "
  ",
                    [Function],
                    "

  color: ",
                    [Function],
                    ";
  width: ",
                    [Function],
                    "px;
  height: ",
                    [Function],
                    "px;
  box-sizing: content-box;
  
  ",
                    [Function],
                    "

  & > svg {
    display: block;
    width: inherit;
    height: inherit;

  }

  &:hover,
  &:active {
    color: ",
                    [Function],
                    ";

  }
",
                  ],
                },
                "displayName": "styled.span",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-bxivhb",
                "target": "span",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            size={16}
          >
            <span
              className="sc-bxivhb iqcteL"
              color="currentColor"
              size={16}
            >
              <test-file-stub />
            </span>
          </StyledComponent>
        </styled.span>
      </ForwardRef>
    </button>
  </StyledComponent>
</ActionIconButtonContainer>
`;

exports[`Storyshots Icon Button variants: flat 1`] = `
<Styled(Styled(styled.button))
  disabled={false}
  onClick={[Function]}
  variant="flat"
>
  <StyledComponent
    disabled={false}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-EHOje",
          "isStatic": false,
          "lastClassName": "eSKeKI",
          "rules": Array [
            "
  ",
            "
  ",
            "display:",
            [Function],
            ";align-items:center;",
            [Function],
            " ",
            [Function],
            " justify-content:center;",
            "
  ",
            [Function],
            "

  padding: 0;
  border: 0;
  background: inherit;

  &:focus,
  &:active {
    outline: 0;
  }
",
            "
",
            "
  ",
            "
  height: ",
            "42",
            "px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;

  width: ",
            [Function],
            ";
",
            "
",
            "
  width: ",
            "42",
            "px;
  border: 0;
  color: #8da2b5;
  background-color: #fff !important;
  border: 1px solid transparent;
  transition: all 0.12s ease-out;
 
  height: ",
            [Function],
            ";
  width: ",
            [Function],
            ";

  &:active {
    ",
            "
  ",
            "background:linear-gradient(180deg,rgba(93,157,245,0.14) 0%,rgba(44,133,255,0.205899) 97.03%),#ffffff;",
            "

  border: 1px solid #fff;
  color: #5b9dfa;
  box-shadow: 0 0 0 1px #5b9dfa99 !important;
",
            "
  }

  ",
            [Function],
            "

  ",
            [Function],
            "

  ",
            [Function],
            "
",
          ],
        },
        "displayName": "Styled(Styled(styled.button))",
        "foldedComponentIds": Array [
          "sc-bdVaJa",
          "sc-ifAKCX",
        ],
        "render": [Function],
        "styledComponentId": "sc-EHOje",
        "target": "button",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    onClick={[Function]}
    variant="flat"
  >
    <button
      className="sc-bdVaJa sc-ifAKCX sc-EHOje eSKeKI"
      disabled={false}
      onClick={[Function]}
    >
      <ForwardRef
        color="currentColor"
        icon="elipsis"
      >
        <styled.span
          color="currentColor"
          size={16}
        >
          <StyledComponent
            color="currentColor"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bxivhb",
                  "isStatic": false,
                  "lastClassName": "iqcteL",
                  "rules": Array [
                    "
  ",
                    [Function],
                    "

  color: ",
                    [Function],
                    ";
  width: ",
                    [Function],
                    "px;
  height: ",
                    [Function],
                    "px;
  box-sizing: content-box;
  
  ",
                    [Function],
                    "

  & > svg {
    display: block;
    width: inherit;
    height: inherit;

  }

  &:hover,
  &:active {
    color: ",
                    [Function],
                    ";

  }
",
                  ],
                },
                "displayName": "styled.span",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-bxivhb",
                "target": "span",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            size={16}
          >
            <span
              className="sc-bxivhb iqcteL"
              color="currentColor"
              size={16}
            >
              <test-file-stub />
            </span>
          </StyledComponent>
        </styled.span>
      </ForwardRef>
    </button>
  </StyledComponent>
</Styled(Styled(styled.button))>
`;

exports[`Storyshots Icon Button variants: normal 1`] = `
<Styled(Styled(styled.button))
  disabled={false}
  onClick={[Function]}
>
  <StyledComponent
    disabled={false}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-EHOje",
          "isStatic": false,
          "lastClassName": "eSKeKI",
          "rules": Array [
            "
  ",
            "
  ",
            "display:",
            [Function],
            ";align-items:center;",
            [Function],
            " ",
            [Function],
            " justify-content:center;",
            "
  ",
            [Function],
            "

  padding: 0;
  border: 0;
  background: inherit;

  &:focus,
  &:active {
    outline: 0;
  }
",
            "
",
            "
  ",
            "
  height: ",
            "42",
            "px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;

  width: ",
            [Function],
            ";
",
            "
",
            "
  width: ",
            "42",
            "px;
  border: 0;
  color: #8da2b5;
  background-color: #fff !important;
  border: 1px solid transparent;
  transition: all 0.12s ease-out;
 
  height: ",
            [Function],
            ";
  width: ",
            [Function],
            ";

  &:active {
    ",
            "
  ",
            "background:linear-gradient(180deg,rgba(93,157,245,0.14) 0%,rgba(44,133,255,0.205899) 97.03%),#ffffff;",
            "

  border: 1px solid #fff;
  color: #5b9dfa;
  box-shadow: 0 0 0 1px #5b9dfa99 !important;
",
            "
  }

  ",
            [Function],
            "

  ",
            [Function],
            "

  ",
            [Function],
            "
",
          ],
        },
        "displayName": "Styled(Styled(styled.button))",
        "foldedComponentIds": Array [
          "sc-bdVaJa",
          "sc-ifAKCX",
        ],
        "render": [Function],
        "styledComponentId": "sc-EHOje",
        "target": "button",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    onClick={[Function]}
  >
    <button
      className="sc-bdVaJa sc-ifAKCX sc-EHOje bsuML"
      disabled={false}
      onClick={[Function]}
    >
      <ForwardRef
        color="currentColor"
        icon="elipsis"
      >
        <styled.span
          color="currentColor"
          size={16}
        >
          <StyledComponent
            color="currentColor"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bxivhb",
                  "isStatic": false,
                  "lastClassName": "iqcteL",
                  "rules": Array [
                    "
  ",
                    [Function],
                    "

  color: ",
                    [Function],
                    ";
  width: ",
                    [Function],
                    "px;
  height: ",
                    [Function],
                    "px;
  box-sizing: content-box;
  
  ",
                    [Function],
                    "

  & > svg {
    display: block;
    width: inherit;
    height: inherit;

  }

  &:hover,
  &:active {
    color: ",
                    [Function],
                    ";

  }
",
                  ],
                },
                "displayName": "styled.span",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-bxivhb",
                "target": "span",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            size={16}
          >
            <span
              className="sc-bxivhb iqcteL"
              color="currentColor"
              size={16}
            >
              <test-file-stub />
            </span>
          </StyledComponent>
        </styled.span>
      </ForwardRef>
    </button>
  </StyledComponent>
</Styled(Styled(styled.button))>
`;
